# BTCStockSimulator

./: .gitignore  README.md
StockServer/: .gitignore  CMakeLists.txt
StockServer/src/: StockEngine.cpp  StockEngine.h  StockServer.cpp
python/: put_data.py  show_data.py  stat_analysis.py
